--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "swagger:validate": "npx @redocly/cli@latest lint swagger.yaml",
+    "swagger:build": "npx @redocly/cli build-docs swagger.yaml"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@redocly/cli": "^1.26.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "nodemon": "^3.1.9",
